--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Android4A</string>
+    <string name="submit">Submit</string>
+    <string name="app_name">DCA Consultinng</string>
+    <string name="first_icon">Notre Equipe</string>
+    <string name="second_icon">Notre Metier</string>
+    <string name="third_icon">Contact</string>
+    <string name="firstfragment_text">FirstFragment</string>
+    <string name="secondfragment_text">SecondFragment</string>
+    <string name="todo">TODO</string>
+    <string name="contact_form">Contact Us</string>
+    <string name="contact_form_name">Your Name</string>
+    <string name="contact_form_email">Your Email</string>
+    <string name="contact_form_subject">Subject</string>
+    <string name="contact_form_message">Message</string>
+    <string name="contact_form_button">Send Message</string>
+    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
+    <string name="contact_posted">Your message has been successfully delivered.</string>
 </resources>
