--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="item_default_name">nom employé</string>
     <string name="apple_macbook_air_core_i5_5th_gen_8_gb_128_gb_ssd_mac_os_sierra">Apple MacBook Air Core i5 5th Gen - (8 GB/128 GB SSD/Mac OS Sierra)</string>
     <string name="notre_metier">TextView</string>
+    <string name="son">Jouer le son</string>
 </resources>
